Import Google Test and Google Mock, add a unit test binary.
Install gcc-4.8 for Travis because gcc-4.6 can't compile Google Mock.
Install libstdc++-4.8-dev for Travis' clang build for similar reasons.
Force the Appveyor build to update submodules.

Try installing libstdc++-4.8-dev to see if it fixes clang build

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,6 +10,7 @@ platform:
 #  - Release
 
 install:
+  - git submodule update --init --recursive
   - SET PATH=c:\python27;%PATH%
   - git clone --quiet --depth 1 https://chromium.googlesource.com/external/gyp.git gyp
   # note windows requires --generator-output to be absolute
