--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,11 @@ compiler:
   - gcc
   - clang
 before_install:
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
   - sudo apt-get install -y gyp ninja-build binutils-gold
+  - if [ "$CXX" = "g++" ]; then sudo apt-get install -y gcc-4.8 g++-4.8; export CXX="g++-4.8" CC="gcc-4.8"; fi
+  - if [ "$CXX" = "clang++" ]; then sudo apt-get install -y libstdc++-4.8-dev; fi
 script:
   - CXXFLAGS=-O2 gyp -f ninja --depth=. ./dump_syms.gyp
   - ninja -C out/Default
