Try to run unit tests as part of travis/appveyor

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_install:
 script:
   - CXXFLAGS=-O2 gyp -f ninja --depth=. ./dump_syms.gyp
   - ninja -C out/Default
+  - out/Default/dump_syms_unittest
 os:
   - linux
 notifications:
